--- a/static/Vote.css
+++ b/static/Vote.css
@@ -1,12 +1,6 @@
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
 
 body {
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: #EBEFF5;
     min-height: 100vh;
     padding: 20px;
     color: #333;
@@ -24,15 +18,7 @@ body {
     overflow: hidden;
 }
 
-.container::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
-}
+
 
 .header {
     text-align: center;
