--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,30 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-
-  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  background: #EBEFF5;
 }
+
 h2 {
   color: #333;
 }
+
 ul {
   list-style-type: none;
   padding: 0;
 }
+
 ul li {
   background: #e3e3e3;
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
 }
+
 a {
   text-decoration: none;
   color: #007bff;
 }
+
 .form-container {
   background-color: white;
   padding: 20px;
@@ -29,6 +33,7 @@ a {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 button {
   background-color: #007bff;
   color: white;
@@ -37,6 +42,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+
 button:hover {
   background-color: #0056b3;
 }
