--- a/survey_game/templates/Home.html
+++ b/survey_game/templates/Home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список опросов</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'Home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Home.css' %}">
 </head>
 
 <body>
