--- a/survey_game/templates/login.html
+++ b/survey_game/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
