--- a/survey_game/templates/register.html
+++ b/survey_game/templates/register.html
@@ -8,7 +8,7 @@
 
 <body>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <div class="form-container">
       <h2>Регистрация</h2>
