--- a/survey_game/templates/results.html
+++ b/survey_game/templates/results.html
@@ -8,7 +8,7 @@
 
 <body>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'result.css' %}">
+    <link rel="stylesheet" href="{% static 'css/result.css' %}">
     <h1>{{poll.name}}</h1>
 
     <hr width="50%" align="center" size="0">
