--- a/survey_game/templates/create.html
+++ b/survey_game/templates/create.html
@@ -41,9 +41,7 @@
             </button>
         </form>
 
-        <a href="/" class="back-link">
-            <i class="fas fa-arrow-left"></i> Вернуться к списку опросов
-        </a>
+        <a href="/" class="back-link">← Вернуться к списку опросов</a>
     </div>
 
     <script>
