changed a register and login pages

--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #EBEFF5;
+    background: #cfdef3;
     color: #333;
     padding: 20px;
     line-height: 1.5;
