--- a/static/css/Create.css
+++ b/static/css/Create.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #EBEFF5;
+    background: #cfdef3;
     color: #333;
     padding: 20px;
     line-height: 1.5;
