--- a/static/css/result.css
+++ b/static/css/result.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #EBEFF5;
+    background: #cfdef3;
     margin: 0;
     padding: 20px;
     display: flex;
