--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background: #EBEFF5;
+  background: #cfdef3;
 }
 
 h2 {
@@ -14,7 +14,7 @@ ul {
 }
 
 ul li {
-  background: #e3e3e3;
+  background: #ffaa9f;
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
@@ -29,7 +29,8 @@ a {
   background-color: white;
   padding: 20px;
   margin: auto;
-  width: 300px;
+  width: 370px;
+  height: 400px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
