added a search for polls

--- a/survey_game/templates/Home.html
+++ b/survey_game/templates/Home.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Система опросов</h1>
+            <h1>Система опросов от LoLkin</h1>
             <div class="user-info">
                 Привет, {{ user.username }}!
             </div>
