--- a/survey_game/templates/login.html
+++ b/survey_game/templates/login.html
@@ -10,6 +10,10 @@
 
 <body>
     <div class="login-card">
+        <div class="header">
+            <h1>Система опросов от LoLkin</h1>
+        </div>
+
         <h2>🔐 Вход</h2>
         <div class="subtitle">Войдите в свой аккаунт</div>
 
